リンクの修正

--- a/links.html
+++ b/links.html
@@ -72,9 +72,9 @@
         <div class="col-sm-3">
           <p><img class="circle" width="60px" height="60px" src="img/twitter.png"><h3>Twitter</h3></p>
           <hr width="100%">
-          <h2>@32ba__</h2>
+          <h2>Twitter</h2>
           <p>みつばのTwitterです。<br>良かったらフォローしてね</p>
-          <p><a class="btn btn-default" role="button" href="https://twitter.com/32ba__">@32ba__ »</a></p>
+          <p><a class="btn btn-default" role="button" href="https://twitter.com/mod_deflate">@mod_deflate »</a></p>
         </div>
         <div class="col-sm-3">
           <p><img class="circle" width="60px" height="60px" src="img/ask.png"><h3>Ask.fm</h3></p>
