--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
             <div class="col-md-3">
               <h2>リンク集 <small>Links</small></h2>
-              <p>みつばがよく使うサービス一覧です。<br>Ask.fmとか、Twitterとかも入っています。</p>
+              <p>みつばがよく使うサービス一覧です。<br>Ask.fm、Twitterとかも入っています。</p>
               <p><a class="btn btn-default" role="button" href="links.html">リンク集 »</a></p>
             </div>
             <div class="col-md-3">
