--- a/credit.html
+++ b/credit.html
@@ -54,8 +54,8 @@
           <ul class="nav navbar-nav">
             <!-- リンク -->
             <li><a href="/">TOP</a></li>
-            <li><a href="profile.html">プロフィール</a></li>
-            <li><a href="links.html">リンク集</a></li>
+            <li><a href="profile.html">Profile</a></li>
+            <li><a href="about.html">リンク集</a></li>
             <li><a href="product.html">製作物</a></li>
           </ul>
         </div>
