--- a/product.html
+++ b/product.html
@@ -57,7 +57,7 @@
             <li><a href="profile.html">Profile</a></li>
             <li><a href="about.html">リンク集</a></li>
             <li><a href="reciprocallink.html">相互リンク</a></li>
-            <li><a href="product.html">製作物</a></li>
+            <li class="active"><li><a href="product.html">製作物</a></li>
           </ul>
         </div>
       </div>
