--- a/reciprocallink.html
+++ b/reciprocallink.html
@@ -56,7 +56,7 @@
             <li><a href="/">TOP</a></li>
             <li><a href="profile.html">Profile</a></li>
             <li><a href="links.html">リンク集</a></li>
-            <li><a href="reciprocallink.html">相互リンク</a></li>
+            <li class="active"><li><a href="reciprocallink.html">相互リンク</a></li>
             <li><a href="product.html">製作物</a></li>
           </ul>
         </div>
