--- a/links.html
+++ b/links.html
@@ -89,7 +89,7 @@
           <hr width="100%">
           <h2>みつばのぶろぐ</h2>
           <p>自由気ままな私のブログです.</p>
-          <p><a class="btn btn-default" role="button" href="http://blog.32ba.net">みつばのぶろぐ »</a></p>
+          <p><a class="btn btn-default" role="button" href="http://32ba.net/blog">みつばのぶろぐ »</a></p>
         </div>
         <div class="col-sm-3">
           <p><img class="circle" width="60px" height="60px" src="img/amazon.png"><h3>Amazon</h3></p>
