fix design and text

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <i class="is-size-2 fas fa-paint-brush fa-fw"></i><br>
               <h4 class="is-size-4">Painting</h4>
               <div class="tag is-light is-warning">Hobbyist</div>
-              <div class="tag is-light is-info">Cartoon-like</div>
+              <div class="tag is-light is-info">Anime-like</div>
             </div>
           </div>
         </section>
@@ -102,11 +102,11 @@
             <div class="column">
               <a class="pixiv" href="https://pixiv.me/32ba" target="_blank"><img src="assets/pixiv.png"  width="45px"></br><p>pixiv : @32ba</p></a>
             </div>
+          </div>
+          <div class="columns is-mobile">
             <div class="column">
               <a class="keybase" href="https://keybase.io/32ba" target="_blank"><i class="is-size-2 fab fa-keybase"></i></br><p>Keybase : @32ba</p></a>
             </div>
-          </div>
-          <div class="columns is-mobile">
             <div class="column">
               <a class="blog" href="https://blog.32ba.net" target="_blank"><i class="is-size-2 fas fa-pen-fancy"></i></br><p>Blog</p></a>
             </div>
