Change mail address

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <a class="blog" href="https://blog.32ba.net" target="_blank"><i class="is-size-2 fas fa-pen-fancy"></i></br><p>Blog</p></a>
             </div>
             <div class="column">
-              <a class="mail" href="mailto:admin@32ba.net" target="_blank"><i class="is-size-2 fas fa-envelope"></i></br><p>Mail</p></a>
+              <a class="mail" href="mailto:contact@32ba.net" target="_blank"><i class="is-size-2 fas fa-envelope"></i></br><p>Mail</p></a>
             </div>
           </div>
         </section>
