--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>32ba / みつば</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="assets/favicon.ico"/>
 
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
