fix icons does not display

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>32ba / みつば</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="assets/favicon.ico"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
   <body>
@@ -95,10 +94,10 @@
           <h1 class="title is-size-2"><i class="fas fa-link"></i> Contact</h1>
           <div class="columns is-mobile">
             <div class="column">
-              <a class="twitter" href="https://twitter.com/32ba__" target="_blank"><i class="is-size-2 devicon-twitter-plain colored"></i></br><p>Twitter : @32ba__</p></a>
+              <a class="twitter" href="https://twitter.com/32ba__" target="_blank"><i class="is-size-2 fab fa-twitter"></i></br><p>Twitter : @32ba__</p></a>
             </div>
             <div class="column">
-              <a class="github" href="https://github.com/32ba" target="_blank"><i class="is-size-2 devicon-github-plain colored"></i></br><p>GitHub : @32ba</p></a>
+              <a class="github" href="https://github.com/32ba" target="_blank"><i class="is-size-2 fab fa-github"></i></br><p>GitHub : @32ba</p></a>
             </div>
             <div class="column">
               <a class="pixiv" href="https://pixiv.me/32ba" target="_blank"><img src="assets/pixiv.png"  width="45px"></br><p>pixiv : @32ba</p></a>
