--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
               <div class="tag is-light is-primary">Competitive Programming</div>
             </div>
             <div class="column">
-              <i class="is-size-2 devicon-python-plain"></i><br>
-              <h4 class="is-size-4">Python</h4>
-              <div class="tag is-light is-primary">Discord bot</div>
+              <i class="is-size-2 devicon-csharp-plain"></i><br>
+              <h4 class="is-size-4">C#</h4>
+              <div class="tag is-light is-info">Unity</div>
             </div>
             <div class="column">
               <i class="is-size-2 devicon-css3-plain"></i><br>
@@ -76,6 +76,11 @@
             </div>
           </div>
           <div class="columns">
+            <div class="column">
+              <i class="is-size-2 devicon-python-plain"></i><br>
+              <h4 class="is-size-4">Python</h4>
+              <div class="tag is-light is-primary">Discord bot</div>
+            </div>
             <div class="column">
               <i class="is-size-2 devicon-linux-plain"></i><br>
               <h4 class="is-size-4">Linux</h4>
