--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <footer class="footer footer-dark has-text-centered">
       <div class="container">
         <div class="columns">
-          <div class="column footer-column has-text-white"><small>Copyright &copy; 32ba 2020.</small></div>
+          <div class="column footer-column has-text-white"><small>Copyright &copy; 32ba 2020 - 2021.</small></div>
         </div>
       </div>
     </footer>
